<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <FrameLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/main_color"
        app:layout_constraintBottom_toTopOf="@id/nav_host_fragment_activity_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="90dp"
            android:background="@drawable/bg_white_rounded"
            android:imeOptions="actionDone"
            android:searchIcon="@drawable/ic_search"
            android:textColor="@color/black"
            app:iconifiedByDefault="false"
            app:queryBackground="@android:color/transparent"
            app:queryHint="@string/search_hint" />

        <ImageButton
            android:id="@+id/settingButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end|center"
            android:layout_marginHorizontal="13dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/image_desc"
            android:src="@drawable/ic_settings"
            tools:ignore="DuplicateSpeakableTextCheck" />

    </FrameLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment_activity_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:navGraph="@navigation/mobile_navigation" />

    <FrameLayout
        android:id="@+id/searchResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?android:attr/colorBackground"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar">

        <TextView
            android:id="@+id/header"
            style="@style/TextView.Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="13dp"
            android:text="@string/result"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="36dp"
            android:orientation="vertical"
            android:padding="13dp"
            android:scrollbars="vertical"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="@id/header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            tools:listitem="@layout/item_vertical" />

        <ProgressBar
            android:id="@+id/searchProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/other_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?android:attr/colorBackground"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar">

        <ImageView
            android:id="@+id/image_other_result"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/image_desc" />

        <TextView
            style="@style/TextView.Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="140dp"
            android:text="@string/not_found_text"
            android:textAlignment="center" />

        <Button
            android:id="@+id/backToHomeButton"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="90dp"
            android:text="@string/back_to_home" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>